--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "multer": "^1.4.2",
         "multer-gridfs-storage": "^4.2.0",
         "nodemailer": "^6.4.16",
+        "nodemon": "^2.0.19",
         "serve-favicon": "~2.4.2"
     },
     "devDependencies": {
