--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-    "name": "karjola",
+    "name": "sloTech",
     "version": "0.1.0",
     "private": true,
     "scripts": {
         "start": "node ./bin/www"
     },
     "engines": {
-        "node": ">=14.10.1",
-        "npm": ">=6.14.8"
+        "node": ">=18.6.0",
+        "npm": "*"
     },
     "dependencies": {
         "axios": "^0.21.0",
