--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
         "multer-gridfs-storage": "^4.2.0",
         "nodemailer": "^6.4.16",
         "nodemon": "^2.0.19",
-        "serve-favicon": "~2.4.2"
-    },
-    "devDependencies": {
+        "serve-favicon": "~2.4.2",
         "mongoose": "^5.13.14"
     }
 }
